; ModuleID = '/home/carl/AnghaBench/linux/security/apparmor/extr_domain.c_may_change_ptraced_domain.c'
source_filename = "/home/carl/AnghaBench/linux/security/apparmor/extr_domain.c_may_change_ptraced_domain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aa_label = type { i32 }
%struct.task_struct = type { i32 }

@current = common dso_local global i32 0, align 4
@PTRACE_MODE_ATTACH = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"ptrace prevents transition\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.aa_label*, i8**)* @may_change_ptraced_domain to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @may_change_ptraced_domain(%struct.aa_label* %0, i8** %1) #0 {
  %3 = alloca %struct.aa_label*, align 8
  %4 = alloca i8**, align 8
  %5 = alloca %struct.task_struct*, align 8
  %6 = alloca %struct.aa_label*, align 8
  %7 = alloca i32, align 4
  store %struct.aa_label* %0, %struct.aa_label** %3, align 8
  store i8** %1, i8*** %4, align 8
  store %struct.aa_label* null, %struct.aa_label** %6, align 8
  store i32 0, i32* %7, align 4
  %8 = call i32 (...) @rcu_read_lock()
  %9 = load i32, i32* @current, align 4
  %10 = call %struct.task_struct* @ptrace_parent(i32 %9)
  store %struct.task_struct* %10, %struct.task_struct** %5, align 8
  %11 = load %struct.task_struct*, %struct.task_struct** %5, align 8
  %12 = icmp ne %struct.task_struct* %11, null
  br i1 %12, label %13, label %16

13:                                               ; preds = %2
  %14 = load %struct.task_struct*, %struct.task_struct** %5, align 8
  %15 = call %struct.aa_label* @aa_get_task_label(%struct.task_struct* %14)
  store %struct.aa_label* %15, %struct.aa_label** %6, align 8
  br label %16

16:                                               ; preds = %13, %2
  %17 = load %struct.task_struct*, %struct.task_struct** %5, align 8
  %18 = icmp ne %struct.task_struct* %17, null
  br i1 %18, label %19, label %23

19:                                               ; preds = %16
  %20 = load %struct.aa_label*, %struct.aa_label** %6, align 8
  %21 = call i64 @unconfined(%struct.aa_label* %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %19, %16
  br label %29

24:                                               ; preds = %19
  %25 = load %struct.aa_label*, %struct.aa_label** %6, align 8
  %26 = load %struct.aa_label*, %struct.aa_label** %3, align 8
  %27 = load i32, i32* @PTRACE_MODE_ATTACH, align 4
  %28 = call i32 @aa_may_ptrace(%struct.aa_label* %25, %struct.aa_label* %26, i32 %27)
  store i32 %28, i32* %7, align 4
  br label %29

29:                                               ; preds = %24, %23
  %30 = call i32 (...) @rcu_read_unlock()
  %31 = load %struct.aa_label*, %struct.aa_label** %6, align 8
  %32 = call i32 @aa_put_label(%struct.aa_label* %31)
  %33 = load i32, i32* %7, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %37

35:                                               ; preds = %29
  %36 = load i8**, i8*** %4, align 8
  store i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i8** %36, align 8
  br label %37

37:                                               ; preds = %35, %29
  %38 = load i32, i32* %7, align 4
  ret i32 %38
}

declare dso_local i32 @rcu_read_lock(...) #1

declare dso_local %struct.task_struct* @ptrace_parent(i32) #1

declare dso_local %struct.aa_label* @aa_get_task_label(%struct.task_struct*) #1

declare dso_local i64 @unconfined(%struct.aa_label*) #1

declare dso_local i32 @aa_may_ptrace(%struct.aa_label*, %struct.aa_label*, i32) #1

declare dso_local i32 @rcu_read_unlock(...) #1

declare dso_local i32 @aa_put_label(%struct.aa_label*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
